add some changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.username=sa
 
 # Mostrar SQL no console
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 # Console H2 (acessível em http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
